# phantomcli

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  VISION.md  bin_phantom.py  build-clean.sh  build.sh  deep_validate.py  mkdocs.yml  phantomcli.spec  pyproject.toml  requirements.txt  run.py  test_phantom.py  version.json
.github/workflows/: binary.yml  tests.yml
deploy/mirror/: Caddyfile  Dockerfile  README.md  phantom-mirror.service
docs/adr/: 0001-open-core-licensing.md  0002-backwards-compat-cohabitation.md  0003-tiered-sandbox.md  0004-pwa-instead-of-native.md  0005-single-hosting-plane.md  0006-stage-gates-and-peer-review.md  0007-windows-sandbox.md  README.md
docs/launch/: GTM_PLAN.md  HN_POST.md  PRICING.md  X_THREAD.md
docs/peer-reviews/: STAGE_0.md  STAGE_1.md  STAGE_2.md  STAGE_3.md  STAGE_4.md  STAGE_5.md  STAGE_6.md  STAGE_7.md  STAGE_8.md  _TEMPLATE.md
docs/security/: sandbox.md
docs/stages/: README.md  STAGE_0.md  STAGE_1.md  STAGE_2.md  STAGE_3.md  STAGE_4.md  STAGE_5.md  STAGE_6.md  STAGE_7.md  STAGE_8.md
docs_site/: index.md
omnicli/: __init__.py  agent_loop.py  agent_scratchpad.py  agents.py  anthropic_stream.py  audit_log.py  auth.py  browser.py  cli.py  commands.py  context_compact.py  context_memory.py  context_memory_watcher.py  cost_tracker.py  dashboard.py  engine.py  executor.py  free_port.py  hooks.py  licensing.py  llm_summarizer.py  logging_setup.py  media.py  memory.py  model_router.py  openai_stream.py  permissions.py  project_memory.py  prompt_builder.py  prompt_cache.py  prompt_guard.py  python_hooks.py  research_phase.py  sessions.py  settings.py  settings_layers.py  slash_commands.py  stream_assembler.py  subagents.py  sysinfo.py  (+11 more)
omnicli/templates/: activate.html  dashboard.html
phantom/: __init__.py  _version.py  profile.py
phantom/acp/: __init__.py  runtime.py
phantom/agent/: __init__.py  decorator.py  oauth_provider.py  provider.py  session.py  spinner.py  streaming.py  tools.py
phantom/auth/: __init__.py  pool.py
phantom/browser/: __init__.py  runner.py  tool.py
phantom/canvas/: __init__.py  node.py  render.py
phantom/channels/: __init__.py  adapter.py  event.py  message.py  router.py
phantom/cli/: __init__.py  __main__.py  _terminal.py  auth.py  bench.py  boot.py  chat.py  dictate_cmd.py  doctor.py  license_cmd.py  mcp_import_cmd.py  mcp_serve.py  memory_cmd.py  provider_cmd.py  repl.py  run.py  selfdev_cmd.py  setup_wizard.py  swarm_cmd.py  sysinfo.py  update_cmd.py
phantom/config/: __init__.py  main.py  presets.py  providers.py
phantom/daemon/: __init__.py  client.py  protocol.py  server.py  transport.py
phantom/dashboard/: __init__.py  server.py
phantom/edits/: __init__.py  transaction.py  wal.py
phantom/engine/: __init__.py  executor.py
phantom/errors/: __init__.py
phantom/hardware/: __init__.py  gpio.py  mqtt.py  peripheral.py  serial_adapter.py
phantom/i18n/: __init__.py  catalog.py
phantom/licensing/: __init__.py
phantom/mcp/: __init__.py  client.py  import_config.py  protocol.py  server.py  transport.py
phantom/memory/: __init__.py  store.py  vector_store.py
phantom/observability/: __init__.py  metrics.py
phantom/onboarding/: __init__.py  wizard.py
phantom/plugins/: __init__.py  capability.py  loader.py  manifest.py  plugin.py  registry.py  signature.py
phantom/pwa/: __init__.py  api.py  build.py  manifest.py  push.py
phantom/refactor/: __init__.py  js_rename.py  python_rename.py
phantom/release/: __init__.py  pipeline.py
phantom/render/: __init__.py  mermaid.py
phantom/sandbox/: README.md  __init__.py  _backend.py  audit.py  limits.py  policy.py  result.py  select.py
phantom/selfdev/: __init__.py  runner.py
phantom/skills/: __init__.py  bundle.py  loader.py
phantom/swarm/: __init__.py  runner.py
phantom/tests/: __init__.py  test_base_url_normalization.py  test_bench.py  test_binary_smoke.py  test_browser.py  test_channel_matrix.py  test_custom_providers.py  test_daemon.py  test_daemon_transport.py  test_dashboard_mermaid.py  test_dictate.py  test_dual_model.py  test_edits.py  test_edits_wal.py  test_fs_tools.py  test_http_timeout.py  test_import_discipline.py  test_licensing.py  test_mcp_import.py  test_memory_importers.py  test_oauth_github.py  test_os_shell_guidance.py  test_personalization.py  test_plugin_mirror.py  test_profile_and_boot.py  test_provider_cmd_interactive.py  test_provider_presets.py  test_pwa_finalization.py  test_pyinstaller_spec.py  test_quick_model_switch.py  test_refactor_js_rename.py  test_refactor_python_rename.py  test_render_mermaid.py  test_repl.py  test_run_bash_timeout.py  test_sandbox_passthrough.py  test_selfdev.py  test_session_budget.py  test_setup_wizard.py  test_slash_commands.py  (+34 more)
phantom/tools/: __init__.py  fs.py  web_fetch.py  web_search.py
phantom/tui/: __init__.py  file_panel.py  progress.py  streaming.py
phantom/voice/: __init__.py  chat_bridge.py  dictate.py  loop.py
tests/: _omnicli_public_snapshot.json  conftest.py  test_agent_loop.py  test_agent_loop_e2e.py  test_agent_scratchpad.py  test_agents_json_extractor.py  test_anthropic_stream.py  test_audit_log.py  test_compat_no_growth.py  test_context_compact.py  test_context_memory.py  test_context_memory_watcher.py  test_cost_tracker.py  test_engine_generate_response_e2e.py  test_execute_tool_integration.py  test_free_port_and_fix_routing.py  test_god_mode_ttl.py  test_hooks.py  test_info_query_routing.py  test_llm_summarizer.py  test_max_rounds.py  test_model_router.py  test_openai_stream.py  test_permissions.py  test_permissions_audit.py  test_project_memory.py  test_prompt_builder.py  test_prompt_cache.py  test_prompt_guard.py  test_pt_session_builds.py  test_python_hooks.py  test_refinement_and_fallback.py  test_research_phase.py  test_retry_prompt_no_format_error.py  test_sessions.py  test_settings_layers.py  test_slash_commands.py  test_smoke_test_real_flask.py  test_smoke_test_url.py  test_sources_command_and_quiet.py  (+11 more)
tests/acp/: test_runtime.py
tests/agent/: test_decorator.py  test_oauth_provider.py  (+3 more)
(+109 files in other folders)
