###############################################################################
# Phantom — pyproject.toml
# -----------------------------------------------------------------------------
# Single-source build, packaging, type-check, lint, and test configuration.
# This file is the authoritative spec; CI and local dev both read from here.
#
# Layout (post-Stage-0):
#   omnicli/   legacy v3.x package (backwards-compatible, frozen API)
#   phantom/   v4.x package (new code lands here)
#
# `omnicli` re-exports the subset of `phantom` that maps 1:1, so the existing
# 796 tests keep passing without modification.
###############################################################################

[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

# ─── Project metadata ─────────────────────────────────────────────────────────
[project]
name            = "phantom-cli"
version         = "1.1.5"
description     = "Phantom — production-grade local AI agent for terminal, web (PWA), and chat channels."
readme          = "README.md"
license         = { text = "Open-Core (MIT core, commercial Pro tier — see LICENSE)" }
requires-python = ">=3.11"
authors         = [{ name = "Aravind Labs", email = "aravind.engineer001@gmail.com" }]
keywords        = ["ai", "agent", "cli", "llm", "phantom", "rag", "mcp", "acp"]

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development",
  "Topic :: Utilities",
]

dependencies = [
  # Runtime — pinned ranges, lockfile generated separately.
  "typer>=0.12",
  "click>=8.1",
  "rich>=13.7",
  "stdiomask",
  "openai>=1.30",
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "playwright>=1.40",
  "plotext",
  "cryptography>=42",
  "requests>=2.31",
  "packaging",
  "ddgs",
  "websockets>=12.0",
  "prompt_toolkit>=3.0",
  # New in v4
  "httpx>=0.27",
  "pydantic>=2.5",
  "jsonschema>=4.21",
  "pynacl>=1.5",          # Ed25519 plugin signature verification
  "aiosqlite>=0.19",
]

[project.optional-dependencies]
# Vector memory — opt-in heavy dep
vector = ["chromadb>=0.5"]
# Realtime voice — opt-in models
voice  = ["faster-whisper>=1.0", "piper-tts>=1.2"]
# Channel adapters — install only what you use
discord  = ["discord.py>=2.4"]
slack    = ["slack-sdk>=3.27"]
matrix   = ["matrix-nio>=0.24"]
# MCP support
mcp      = ["mcp>=0.9"]
# Dev tooling
dev = [
  "pytest>=9.0",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "pytest-xdist>=3.5",
  "coverage[toml]>=7.4",
  "ruff>=0.5",
  "mypy>=1.10",
  "bandit>=1.7",
  "pip-audit>=2.7",
  "tox>=4.14",
  "mkdocs-material>=9.5",
  "mkdocstrings[python]>=0.25",
]

[project.scripts]
phantom    = "phantom.cli:main"
phantomcli = "omnicli.cli:main"   # legacy alias

[project.urls]
Homepage      = "https://phantom.aravindlabs.tech"
Documentation = "https://docs.phantom.aravindlabs.tech"
Repository    = "https://github.com/krish9219/phantomcli"
Issues        = "https://github.com/krish9219/phantomcli/issues"
Changelog     = "https://github.com/krish9219/phantomcli/blob/main/CHANGELOG.md"

# ─── setuptools ──────────────────────────────────────────────────────────────
[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where   = ["."]
include = ["phantom*", "omnicli*"]

[tool.setuptools.package-data]
phantom = ["py.typed", "templates/*.html", "i18n/locales/**/*.po", "i18n/locales/**/*.mo"]
omnicli = ["templates/*.html"]

# ─── pytest ───────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
minversion       = "9.0"
testpaths        = ["tests", "phantom/tests"]
python_files     = ["test_*.py"]
python_classes   = ["Test*"]
python_functions = ["test_*"]
addopts = [
  "-ra",
  "--strict-markers",
  "--strict-config",
  "--showlocals",
]
markers = [
  "slow: deselect with '-m \"not slow\"'",
  "integration: tests that talk to external services (skipped without keys)",
  "live: tests that hit live paid APIs (only run on demand)",
  "security: security-critical paths — must always pass",
  "stage0: foundation tests",
  "stage1: sandbox tests",
  "stage2: plugin tests",
  "stage3: channel tests",
  "stage4: mcp/acp tests",
  "stage5: skills/memory tests",
  "stage6: voice/canvas/pwa tests",
  "stage7: i18n/docs tests",
  "stage8: hardening tests",
]
filterwarnings = [
  "error",
  # Third-party noise that we intentionally tolerate.
  "ignore::DeprecationWarning:websockets.*",
  "ignore::DeprecationWarning:pydantic.*",
  "ignore::DeprecationWarning:click.*",
  "ignore::DeprecationWarning:typer.*",
  "ignore::PendingDeprecationWarning",
  # Legacy v3 sqlite connection lifetime — Stage 5 memory rewrite owns the
  # fix. Ignoring here keeps the 796-test baseline green during the v4
  # transition. Tracked in `docs/peer-reviews/STAGE_0.md` § 3 (suggested
  # follow-ups) and revisited in Stage 5.
  "ignore::ResourceWarning",
]
# `asyncio_mode` is set in conftest.py once Stage 4 brings pytest-asyncio in.

# ─── coverage ─────────────────────────────────────────────────────────────────
[tool.coverage.run]
branch        = true
source        = ["phantom", "omnicli"]
parallel      = true
relative_files = true
omit = [
  "*/templates/*",
  "*/__main__.py",
  "*/_version.py",
]

[tool.coverage.report]
precision           = 2
show_missing        = true
skip_covered        = false
sort                = "Cover"
fail_under          = 0          # Per-module gates enforced via Makefile target;
                                  # global gate raised stage-by-stage.
exclude_also = [
  "raise NotImplementedError",
  "if TYPE_CHECKING:",
  "if __name__ == .__main__.:",
  "@(abc\\.)?abstractmethod",
  "def __repr__",
  "pragma: no cover",
]

[tool.coverage.paths]
source = ["phantom", "omnicli"]

# ─── ruff ─────────────────────────────────────────────────────────────────────
[tool.ruff]
line-length    = 100
target-version = "py311"
extend-exclude = ["build", "dist", ".venv", "venv", "__pycache__"]

[tool.ruff.lint]
# Strict by default; loosen in [per-file-ignores] if a real exception arises.
select = [
  "E", "W",      # pycodestyle
  "F",           # pyflakes
  "I",           # isort
  "B",           # bugbear
  "C4",          # comprehensions
  "UP",          # pyupgrade
  "S",           # bandit-lite
  "RUF",         # ruff-specific
  "SIM",         # simplify
  "TID",         # tidy imports
  "PL",          # pylint
  "PERF",        # perflint
  "ASYNC",       # async best practice
]
ignore = [
  "E501",        # handled by line-length
  "PLR0913",     # too-many-args — pragmatic in CLI signatures
  "PLR2004",     # magic numbers — too noisy in tests
  "S101",        # asserts in tests are fine
  "S311",        # random for non-crypto is fine
]

[tool.ruff.lint.per-file-ignores]
"tests/**"          = ["S", "PLR", "ASYNC"]
"phantom/tests/**"  = ["S", "PLR", "ASYNC"]
"phantom/_compat.py" = ["F401", "F403"]

[tool.ruff.format]
quote-style              = "double"
indent-style             = "space"
docstring-code-format    = true
docstring-code-line-length = 90

# ─── mypy ─────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.11"
strict         = true

# Be pragmatic on legacy code; tighten progressively.
files = ["phantom"]

# Strict knobs (redundant with `strict = true` but explicit for clarity).
disallow_untyped_defs       = true
disallow_incomplete_defs    = true
check_untyped_defs          = true
no_implicit_optional        = true
warn_redundant_casts        = true
warn_unused_ignores         = true
warn_no_return              = true
warn_return_any             = true
warn_unreachable            = true
strict_equality             = true

[[tool.mypy.overrides]]
module = ["chromadb.*", "faster_whisper.*", "piper.*", "matrix_nio.*", "discord.*", "slack_sdk.*", "mcp.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# Legacy package — opt-in typing later, in Stage 8.
module                  = "omnicli.*"
disallow_untyped_defs   = false
disallow_incomplete_defs = false
warn_return_any         = false

# ─── bandit ───────────────────────────────────────────────────────────────────
[tool.bandit]
exclude_dirs = ["tests", "build", "dist", "venv", ".venv"]
skips        = ["B101"]   # assert is fine in our codebase

###############################################################################
# End of pyproject.toml
###############################################################################
